samples/_failures_safe/1761341466_03f130_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38e2e62b.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_38e2e62b.c:167:5: error: expected declaration or statement at end of input
  167 |     switch (type) {
      |     ^~~~~~
./samples/SAFE/__tmp_38e2e62b.c:167:5: error: expected declaration or statement at end of input
